...
            Icons.auto_awesome,
            color: context.colorScheme.primary,
            size: 28.0,
          ),
          const SizedBox(width: 12),
          SelectableText(
            "What's New?",
            style: AppStyles.pageTitle(context),
          ),
        ],
      ),
      content: SizedBox(
        width: Responsive.getDialogWidth(context),
...
