...
                Icon(
                  Icons.rocket_launch_outlined,
                  color: context.colorScheme.primary,
                  size: 28,
                ),
                const SizedBox(width: 12),
                Text('Welcome to Helium!', style: AppStyles.pageTitle(context)),
              ],
            ),
            content: SizedBox(
              width: Responsive.getDialogWidth(context),
              child: Column(
                mainAxisSize: MainAxisSize.min,
...
